k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: $SERVICE_NAME
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        name: $SERVICE_NAME
    spec:
      containers:
        - name: $SERVICE_NAME
          image: $DOCKER_IMAGE_REPO/$DOCKER_IMAGE_NAME:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: $SERVICE_NAME
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE_NAME
spec:
  rules:
  - host: $HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $SERVICE_NAME
            port:
              number: 80
  ingressClassName: nginx
